Split BerghA file

--- a/BerghAOriginal.ipynb
+++ b/BerghAOriginal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "c2adc387",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "coneRayDecomposition (generic function with 1 method)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "id": "a8892b3c",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
        "BerghA (generic function with 2 methods)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,29 +228,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "id": "b1619ea4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x00007f88383a5740), Dict(\"2,5\" => 1, \"1,0\" => 1))"
+       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x0000000001c4f300), Dict(\"2,0,3\" => 1, \"1,3,0\" => 1, \"1,0,0\" => 1))"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0 ; 2 5],INPUT_CONES=[[0,1]])\n",
-    "F=addStackStructure(X,[1,1])"
+    "X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0 0; 1 3 0; 2 0 3],INPUT_CONES=[[0,1,2]])\n",
+    "F=addStackStructure(X,[1,1,1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "id": "b3fccb2b",
    "metadata": {},
    "outputs": [
@@ -262,52 +262,58 @@
       " \n",
       "=======\n",
       "Number of extremal cones: 1\n",
-      "Maximal non-distinguished rays and multiplicity: 1, 5\n",
+      "Maximal non-distinguished rays and multiplicity: 0, 9\n",
       "=======\n",
       "Number of extremal cones: 1\n",
-      "Maximal non-distinguished rays and multiplicity: 1, 2\n",
+      "Maximal non-distinguished rays and multiplicity: 0, 6\n",
+      "=======\n",
+      "Number of extremal cones: 1\n",
+      "Maximal non-distinguished rays and multiplicity: 0, 5\n",
+      "=======\n",
+      "Number of extremal cones: 1\n",
+      "Maximal non-distinguished rays and multiplicity: 0, 4\n",
+      "=======\n",
+      "Number of extremal cones: 5\n",
+      "Maximal non-distinguished rays and multiplicity: 0, 3\n",
+      "=======\n",
+      "Number of extremal cones: 4\n",
+      "Maximal non-distinguished rays and multiplicity: 0, 3\n",
       "=======\n",
       "Number of extremal cones: 3\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 5\n",
+      "Maximal non-distinguished rays and multiplicity: 0, 3\n",
       "=======\n",
       "Number of extremal cones: 2\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 5\n",
-      "=======\n",
-      "Number of extremal cones: 1\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 5\n",
+      "Maximal non-distinguished rays and multiplicity: 0, 3\n",
       "=======\n",
       "Number of extremal cones: 1\n",
       "Maximal non-distinguished rays and multiplicity: 0, 3\n",
       "=======\n",
-      "Number of extremal cones: 3\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 2\n",
-      "=======\n",
       "Number of extremal cones: 2\n",
       "Maximal non-distinguished rays and multiplicity: 0, 2\n",
       "=======\n",
       "Number of extremal cones: 1\n",
       "Maximal non-distinguished rays and multiplicity: 0, 2\n",
       "=======\n",
-      "Number of steps: 9\n",
-      "  4.220298 seconds (730.25 k allocations: 17.417 MiB, 1.72% compilation time)\n"
+      "Number of steps: 11\n",
+      " 18.514801 seconds (2.12 M allocations: 26.960 MiB)\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "(StackyFan(BigObjectAllocated(Ptr{Nothing} @0x00007f883912eb00), Dict(\"5,7\"=>20, \"9,10\"=>15, \"8,9\"=>30, \"7,8\"=>15, \"5,6\"=>15, \"1,2\"=>5, \"2,5\"=>2, \"3,4\"=>10, \"4,5\"=>10, \"2,3\"=>10…)), [$5$, $1$, $2$, $1$, $10$, $1$, $5$, $2$, $10$, $1$, $15$, $20$, $5$, $30$, $30$])"
+       "(StackyFan(BigObjectAllocated(Ptr{Nothing} @0x000000001ab14a70), Dict(\"1,1,1\"=>30, \"4,3,3\"=>60, \"3,2,2\"=>180, \"1,0,1\"=>90, \"1,2,0\"=>180, \"1,0,0\"=>180, \"2,1,1\"=>360, \"2,2,1\"=>540, \"3,3,2\"=>180, \"2,0,3\"=>30…)), [$3$, $1$, $6$, $15$, $60$, $1$, $30$, $45$, $90$, $1$, $90$, $540$, $360$, $360$])"
       ],
       "text/plain": [
-       "(StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x00007f883912eb00), Dict(\"5,7\" => 20, \"9,10\" => 15, \"8,9\" => 30, \"7,8\" => 15, \"5,6\" => 15, \"1,2\" => 5, \"2,5\" => 2, \"3,4\" => 10, \"4,5\" => 10, \"2,3\" => 10…)), [5, 1, 2, 1, 10, 1, 5, 2, 10, 1, 15, 20, 5, 30, 30])"
+       "(StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x000000001ab14a70), Dict(\"1,1,1\" => 30, \"4,3,3\" => 60, \"3,2,2\" => 180, \"1,0,1\" => 90, \"1,2,0\" => 180, \"1,0,0\" => 180, \"2,1,1\" => 360, \"2,2,1\" => 540, \"3,3,2\" => 180, \"2,0,3\" => 30…)), [3, 1, 6, 15, 60, 1, 30, 45, 90, 1, 90, 540, 360, 360])"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "@time C=BerghA(F,[0,1])"
+    "@time C=BerghA(F,[1,1,1])"
    ]
   },
   {
