--- a/BerghAEfficient.ipynb
+++ b/BerghAEfficient.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 18,
    "id": "c2adc387",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "coneRayDecomposition (generic function with 1 method)"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,17 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 19,
    "id": "a8892b3c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "BerghA (generic function with 2 methods)"
+       "BerghA (generic function with 1 method)"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
     "            push!(P,stackyPoint)\n",
     "        end\n",
     "        \n",
-    "        #A2 - find element of P such that the sum of the entries is minimal.\n",
+    "        #A2 - find element of P such that the sum of the coefficients corresponding to distinguished rays is minimal.\n",
     "            #This invariant does not produce a unique ray, so there is a degree of arbitrary selection.\n",
     "        psi=minimalByDist(P,D)\n",
     "        #if verbose==true\n",
@@ -218,207 +218,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 28,
    "id": "b3fccb2b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "==algorithm is running in verbose mode==\n",
-      " \n",
-      "=======\n",
-      "Number of extremal cones: 1\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 35729\n",
-      "=======\n",
-      "Number of extremal cones: 1\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 144\n",
-      "=======\n",
-      "Number of extremal cones: 1\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 91\n",
-      "=======\n",
-      "Number of extremal cones: 1\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 78\n",
-      "=======\n",
-      "Number of extremal cones: 1\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 63\n",
-      "=======\n",
-      "Number of extremal cones: 1\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 52\n",
-      "=======\n",
-      "Number of extremal cones: 2\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 49\n",
-      "=======\n",
-      "Number of extremal cones: 1\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 49\n",
-      "=======\n",
-      "Number of extremal cones: 1\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 39\n",
-      "=======\n",
-      "Number of extremal cones: 2\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 35\n",
-      "=======\n",
-      "Number of extremal cones: 1\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 35\n",
-      "=======\n",
-      "Number of extremal cones: 1\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 26\n",
-      "=======\n",
-      "Number of extremal cones: 1\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 25\n",
-      "=======\n",
-      "Number of extremal cones: 2\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 21\n",
-      "=======\n",
-      "Number of extremal cones: 1\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 21\n",
-      "=======\n",
-      "Number of extremal cones: 2\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 15\n",
-      "=======\n",
-      "Number of extremal cones: 1\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 15\n",
-      "=======\n",
-      "Number of extremal cones: 1\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 13\n",
-      "=======\n",
-      "Number of extremal cones: 1\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 12\n",
-      "=======\n",
-      "Number of extremal cones: 1\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 8\n",
-      "=======\n",
-      "Number of extremal cones: 4\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 7\n",
-      "=======\n",
-      "Number of extremal cones: 3\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 7\n",
-      "=======\n",
-      "Number of extremal cones: 2\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 7\n",
-      "=======\n",
-      "Number of extremal cones: 1\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 7\n",
-      "=======\n",
-      "Number of extremal cones: 2\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 6\n",
-      "=======\n",
-      "Number of extremal cones: 1\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 6\n",
-      "=======\n",
-      "Number of extremal cones: 2\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 5\n",
-      "=======\n",
-      "Number of extremal cones: 1\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 5\n",
-      "=======\n",
-      "Number of extremal cones: 3\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 4\n",
-      "=======\n",
-      "Number of extremal cones: 2\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 4\n",
-      "=======\n",
-      "Number of extremal cones: 1\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 4\n",
-      "=======\n",
-      "Number of extremal cones: 12\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 3\n",
-      "=======\n",
-      "Number of extremal cones: 11\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 3\n",
-      "=======\n",
-      "Number of extremal cones: 10\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 3\n",
-      "=======\n",
-      "Number of extremal cones: 9\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 3\n",
-      "=======\n",
-      "Number of extremal cones: 8\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 3\n",
-      "=======\n",
-      "Number of extremal cones: 7\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 3\n",
-      "=======\n",
-      "Number of extremal cones: 6\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 3\n",
-      "=======\n",
-      "Number of extremal cones: 5\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 3\n",
-      "=======\n",
-      "Number of extremal cones: 4\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 3\n",
-      "=======\n",
-      "Number of extremal cones: 3\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 3\n",
-      "=======\n",
-      "Number of extremal cones: 2\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 3\n",
-      "=======\n",
-      "Number of extremal cones: 1\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 3\n",
-      "=======\n",
-      "Number of extremal cones: 14\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 2\n",
-      "=======\n",
-      "Number of extremal cones: 13\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 2\n",
-      "=======\n",
-      "Number of extremal cones: 12\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 2\n",
-      "=======\n",
-      "Number of extremal cones: 11\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 2\n",
-      "=======\n",
-      "Number of extremal cones: 10\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 2\n",
-      "=======\n",
-      "Number of extremal cones: 9\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 2\n",
-      "=======\n",
-      "Number of extremal cones: 8\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 2\n",
-      "=======\n",
-      "Number of extremal cones: 7\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 2\n",
-      "=======\n",
-      "Number of extremal cones: 6\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 2\n",
-      "=======\n",
-      "Number of extremal cones: 5\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 2\n",
-      "=======\n",
-      "Number of extremal cones: 4\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 2\n",
-      "=======\n",
-      "Number of extremal cones: 3\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 2\n",
-      "=======\n",
-      "Number of extremal cones: 2\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 2\n",
-      "=======\n",
-      "Number of extremal cones: 1\n",
-      "Maximal non-distinguished rays and multiplicity: 0, 2\n",
-      "=======\n",
-      "Number of steps: 57\n",
-      " 94.075021 seconds (39.40 M allocations: 712.448 MiB, 0.14% gc time, 0.71% compilation time)\n"
-     ]
-    },
-    {
      "data": {
+      "text/html": [
+       "[$4$, $34$, $6$, $68$, $34$, $68$, $34$, $6$, $12$]"
+      ],
       "text/plain": [
-       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x00000000240ca090), Dict(\"29,88\" => 294961474080, \"11,32\" => 2949614740800, \"15,46\" => 49160245680, \"4,11\" => 5899229481600, \"15,44\" => 737403685200, \"9,5\" => 468192816, \"31,95\" => 196640982720, \"1,2\" => 5899229481600, \"27,82\" => 1179845896320, \"59,33\" => 73038079296…))"
+       "9-element Vector{Int64}:\n",
+       "  4\n",
+       " 34\n",
+       "  6\n",
+       " 68\n",
+       " 34\n",
+       " 68\n",
+       " 34\n",
+       "  6\n",
+       " 12"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[323 179; 44 135],INPUT_CONES=[[0,1]])\n",
-    "F=addStackStructure(X,[1,1])\n",
-    "@time BerghA(F,[1,1],verbose=true)"
+    "X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0; 4 3; 1 5],INPUT_CONES=[[0,1],[1,2]])\n",
+    "F=addStackStructure(X,[1,1,1])\n",
+    "stackyWeights(BerghA(F,[1,1,1]))"
    ]
   },
   {
