Cleaned up documentation in StackyFan

--- a/BerghAEfficient.ipynb
+++ b/BerghAEfficient.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "id": "c2adc387",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "coneRayDecomposition (generic function with 1 method)"
+       "BerghA"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,7 +23,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
+   "id": "8d664247-bf1e-49bb-9422-db352fbe6082",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "[$2$, $1$, $3$]"
+      ],
+      "text/plain": [
+       "3-element Vector{Int64}:\n",
+       " 2\n",
+       " 1\n",
+       " 3"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0; 1 2],INPUT_CONES=[[0,1]]);\n",
+    "\n",
+    "F=addStackStructure(X,[2,3]);\n",
+    "\n",
+    "stackyWeights(stackyBlowup(F,[0,1],[1,1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "a8892b3c",
    "metadata": {},
    "outputs": [
@@ -33,7 +64,7 @@
        "BerghA (generic function with 1 method)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,10 +74,54 @@
     "\n",
     "    BerghA(F::StackyFan,D::Array{Int64,1})\n",
     "\n",
-    "    Given a stacky fan F and a vector of booleans D representing the distinguished structure,\n",
-    "    returns a smooth stacky fan where the distinguished rays are independent.\n",
+    "Given a stacky fan F and a vector of booleans D representing the distinguished structure, returns a smooth stacky fan where the distinguished rays are independent.\n",
     "\n",
-    "    \n",
+    "The algorithm is adapted from Daniel Bergh's [paper on destackification](https://arxiv.org/abs/1409.5713). Roughly, it identifies non-smooth cones containing at least one distinguished ray, finds interior points in those cones, and subdivides at those points through a series of stacky barycentric subdivisions.\n",
+    "\n",
+    "# Examples\n",
+    "```jldoctest StackyFan.jl\n",
+    "\n",
+    "julia> X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0; 2 5],INPUT_CONES=[[0,1]]);\n",
+    "julia> F=addStackStructure(X,[1,1]);\n",
+    "julia> stackyWeights(BerghA(F,[1,1]))\n",
+    "[ 5 ,  2 ,  5 ,  10 ]\n",
+    "\n",
+    "julia> X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0; 2 5],INPUT_CONES=[[0,1]]);\n",
+    "julia> F=addStackStructure(X,[1,1]);\n",
+    "julia> stackyWeights(BerghA(F,[1,0]));\n",
+    "[ 5 ,  5 ,  1 ,  2 ,  5 ,  10 ]\n",
+    "\n",
+    "julia> X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0; 2 5],INPUT_CONES=[[0,1]]);\n",
+    "julia> F=addStackStructure(X,[1,1]);\n",
+    "julia> stackyWeights(BerghA(F,[0,1]))\n",
+    "[ 1 ,  5 ,  5 ,  2 ,  5 ,  1 ,  5 ,  10 ]\n",
+    "\n",
+    "julia> X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[4 1; 7 9],INPUT_CONES=[[0,1]]);\n",
+    "julia> F=addStackStructure(X,[1,1])l;\n",
+    "julia> stackyWeights(BerghA(F,[1,0]))\n",
+    "[ 609 ,  29 ,  1 ,  174 ,  29 ,  1740 ,  1218 ,  58 ,  145 ,  1044 ,  1044 ,  290 ,  290 ,  145 ,  406 ,  348 ,  261 ,  14616 ,  14616 ,  609 ,  3480 ,  870 ,  609 ,  174 ,  609 ,  9744 ,  14616 ,  1218 ,  58 ,  145 ,  435 ,  725 ,  1305 ,  1740 ,  6960 ,  3480 ,  870 ,  3480 ,  58464 ,  6090 ,  3480 ,  1392 ,  696 ,  1044 ,  2088 ,  261 ,  174 ,  261 ,  609 ,  406 ,  609 ,  609 ,  406 ,  609 ,  1218 ,  812 ,  1218 ,  2088 ,  261 ,  1044 ,  1160 ,  1740 ,  1740 ,  870 ,  1305 ,  1305 ,  14616 ,  10440 ,  145 ,  435 ,  609 ,  116 ,  580 ,  290 ,  580 ,  1740 ,  3480 ,  3480 ,  261 ,  522 ,  261 ,  522 ,  522 ,  1218 ,  1218 ,  1218 ,  1218 ,  2436 ,  2436 ,  4176 ,  2088 ,  3480 ,  2610 ,  29232 ,  6090 ,  1218 ,  290 ,  145 ,  290 ,  12180 ,  261 ,  522 ]\n",
+    "\n",
+    "julia> X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[323 179; 44 135],INPUT_CONES=[[0,1]]);\n",
+    "julia> F=addStackStructure(X,[1,1]);\n",
+    "julia> stackyWeights(BerghA(F,[1,1]))\n",
+    "[ 491602456800 ,  49160245680 ,  294961474080 ,  468192816 ,  12173013216 ,  73038079296 ,  12173013216 ,  97384105728 ,  73038079296 ,  196640982720 ,  131093988480 ,  156064272 ,  936385632 ,  468192816 ,  196640982720 ,  49160245680 ,  9832049136 ,  292152317184 ,  5899229481600 ,  3932819654400 ,  589922948160 ,  393281965440 ,  12173013216 ,  8115342144 ,  12173013216 ,  5899229481600 ,  589922948160 ,  737403685200 ,  51126655507200 ,  292152317184 ,  51126655507200 ,  5899229481600 ,  5899229481600 ,  589922948160 ,  589922948160 ,  196640982720 ,  2949614740800 ,  5899229481600 ,  294961474080 ,  589922948160 ,  196640982720 ,  589922948160 ,  393281965440 ,  936385632 ,  24346026432 ,  24346026432 ,  11798458963200 ,  1179845896320 ,  737403685200 ,  1474807370400 ,  2949614740800 ,  5899229481600 ,  589922948160 ,  11798458963200 ,  1179845896320 ,  2949614740800 ,  1474807370400 ,  5899229481600 ,  102253311014400 ]\n",
+    "\n",
+    "julia> X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0 3; 4 5 6; 2 3 1],INPUT_CONES=[[0,1,2]]);\n",
+    "julia> F=addStackStructure(X,[1,1,1]);\n",
+    "julia> stackyWeights(BerghA(F,[1,1,1]))\n",
+    "[ 28 ,  21 ,  84 ,  28 ,  84 ,  84 ,  42 ,  84 ,  168 ]\n",
+    "\n",
+    "julia> X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0 2; 2 1 1; 5 3 9],INPUT_CONES=[[0,1,2]]);\n",
+    "julia> F=addStackStructure(X,[1,1,1]);\n",
+    "julia> stackyWeights(BerghA(F,[1,1,1]))\n",
+    "[ 4 ,  4 ,  8 ,  4 ,  4 ,  8 ]\n",
+    "\n",
+    "julia> X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0; 4 3; 1 5],INPUT_CONES=[[0,1],[1,2]]);\n",
+    "julia> F=addStackStructure(X,[1,1,1]);\n",
+    "julia> stackyWeights(BerghA(F,[1,1,1]))\n",
+    "[ 4 ,  34 ,  6 ,  68 ,  34 ,  68 ,  34 ,  6 ,  12 ]\n",
+    "\n",
+    "```\n",
     "\"\"\"\n",
     "\n",
     "function BerghA(F::StackyFan,D::Array{Int64,1};verbose::Bool=false)\n",
@@ -161,6 +236,7 @@
     "            supportCone=findall(x->x!=0,psi)\n",
     "            #find the stacky barycenter of that cone, which becomes the exceptional (blowup) ray\n",
     "            exceptional=findStackyBarycenter(supportCone,X)\n",
+    "            println(exceptional)\n",
     "            \n",
     "            #Performing a blowup may cause the rays defined in the StackyFan struct to be reordered - this property is inherited from\n",
     "                #the Oscar/Polymake fan object. Since D (distinguished rays) and psi are lists, they must be reordered to match the\n",
@@ -218,54 +294,257 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 55,
    "id": "b3fccb2b",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==algorithm is running in verbose mode==\n",
+      " \n",
+      "=======\n",
+      "Number of extremal cones: 1\n",
+      "Maximal non-distinguished rays and multiplicity: 0, 101\n",
+      "=======\n",
+      "Number of extremal cones: 1\n",
+      "Maximal non-distinguished rays and multiplicity: 0, 6\n",
+      "=======\n",
+      "Number of extremal cones: 2\n",
+      "Maximal non-distinguished rays and multiplicity: 0, 5\n",
+      "=======\n",
+      "Number of extremal cones: 1\n",
+      "Maximal non-distinguished rays and multiplicity: 0, 5\n",
+      "=======\n",
+      "Number of extremal cones: 2\n",
+      "Maximal non-distinguished rays and multiplicity: 0, 3\n",
+      "=======\n",
+      "Number of extremal cones: 1\n",
+      "Maximal non-distinguished rays and multiplicity: 0, 3\n",
+      "=======\n",
+      "Number of extremal cones: 4\n",
+      "Maximal non-distinguished rays and multiplicity: 0, 2\n",
+      "=======\n",
+      "Number of extremal cones: 3\n",
+      "Maximal non-distinguished rays and multiplicity: 0, 2\n",
+      "=======\n",
+      "Number of extremal cones: 2\n",
+      "Maximal non-distinguished rays and multiplicity: 0, 2\n",
+      "=======\n",
+      "Number of extremal cones: 1\n",
+      "Maximal non-distinguished rays and multiplicity: 0, 2\n",
+      "=======\n",
+      "Number of steps: 10\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "[$4$, $34$, $6$, $68$, $34$, $68$, $34$, $6$, $12$]"
+       "[$505$, $3030$, $2020$, $3030$, $3030$, $3030$, $6060$, $3030$, $6060$, $6060$, $6060$, $3030$]"
       ],
       "text/plain": [
-       "9-element Vector{Int64}:\n",
-       "  4\n",
-       " 34\n",
-       "  6\n",
-       " 68\n",
-       " 34\n",
-       " 68\n",
-       " 34\n",
-       "  6\n",
-       " 12"
+       "12-element Vector{Int64}:\n",
+       "  505\n",
+       " 3030\n",
+       " 2020\n",
+       " 3030\n",
+       " 3030\n",
+       " 3030\n",
+       " 6060\n",
+       " 3030\n",
+       " 6060\n",
+       " 6060\n",
+       " 6060\n",
+       " 3030"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0; 4 3; 1 5],INPUT_CONES=[[0,1],[1,2]])\n",
-    "F=addStackStructure(X,[1,1,1])\n",
-    "stackyWeights(BerghA(F,[1,1,1]))"
+    "X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[13 7; 6 11],INPUT_CONES=[[0,1]])\n",
+    "F=addStackStructure(X,[1,1])\n",
+    "stackyWeights(BerghA(F,[1,1],verbose=true))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "874aa316",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "77b27ac9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "search: \u001b[0m\u001b[1mc\u001b[22m\u001b[0m\u001b[1mo\u001b[22m\u001b[0m\u001b[1ms\u001b[22m \u001b[0m\u001b[1mc\u001b[22m\u001b[0m\u001b[1mo\u001b[22m\u001b[0m\u001b[1ms\u001b[22md \u001b[0m\u001b[1mc\u001b[22m\u001b[0m\u001b[1mo\u001b[22m\u001b[0m\u001b[1ms\u001b[22mc \u001b[0m\u001b[1mc\u001b[22m\u001b[0m\u001b[1mo\u001b[22m\u001b[0m\u001b[1ms\u001b[22mh \u001b[0m\u001b[1mc\u001b[22m\u001b[0m\u001b[1mo\u001b[22m\u001b[0m\u001b[1ms\u001b[22mpi \u001b[0m\u001b[1mc\u001b[22m\u001b[0m\u001b[1mo\u001b[22m\u001b[0m\u001b[1ms\u001b[22m_minpoly \u001b[0m\u001b[1mc\u001b[22m\u001b[0m\u001b[1mo\u001b[22m\u001b[0m\u001b[1ms\u001b[22met_decomposition a\u001b[0m\u001b[1mc\u001b[22m\u001b[0m\u001b[1mo\u001b[22m\u001b[0m\u001b[1ms\u001b[22m a\u001b[0m\u001b[1mc\u001b[22m\u001b[0m\u001b[1mo\u001b[22m\u001b[0m\u001b[1ms\u001b[22md\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{verbatim}\n",
+       "cos(x)\n",
+       "\\end{verbatim}\n",
+       "Compute cosine of \\texttt{x}, where \\texttt{x} is in radians.\n",
+       "\n",
+       "\\rule{\\textwidth}{1pt}\n",
+       "\\begin{verbatim}\n",
+       "cos(A::AbstractMatrix)\n",
+       "\\end{verbatim}\n",
+       "Compute the matrix cosine of a square matrix \\texttt{A}.\n",
+       "\n",
+       "If \\texttt{A} is symmetric or Hermitian, its eigendecomposition (\\href{@ref}{\\texttt{eigen}}) is used to compute the cosine. Otherwise, the cosine is determined by calling \\href{@ref}{\\texttt{exp}}.\n",
+       "\n",
+       "\\section{Examples}\n",
+       "\\begin{verbatim}\n",
+       "julia> cos(fill(1.0, (2,2)))\n",
+       "2×2 Matrix{Float64}:\n",
+       "  0.291927  -0.708073\n",
+       " -0.708073   0.291927\n",
+       "\\end{verbatim}\n",
+       "\\rule{\\textwidth}{1pt}\n",
+       "\\begin{verbatim}\n",
+       "cos(x::arb)\n",
+       "\\end{verbatim}\n",
+       "Return the cosine of $x$.\n",
+       "\n",
+       "\\rule{\\textwidth}{1pt}\n",
+       "\\begin{verbatim}\n",
+       "cos(x::acb)\n",
+       "\\end{verbatim}\n",
+       "Return the cosine of $x$.\n",
+       "\n",
+       "\\rule{\\textwidth}{1pt}\n",
+       "\\begin{verbatim}\n",
+       "cos(a::fmpq_rel_series)\n",
+       "\\end{verbatim}\n",
+       "Return cos$(a)$. Requires a zero constant term.\n",
+       "\n",
+       "\\rule{\\textwidth}{1pt}\n",
+       "\\begin{verbatim}\n",
+       "cos(a::fmpq_abs_series)\n",
+       "\\end{verbatim}\n",
+       "Return cos$(a)$. Requires a zero constant term.\n",
+       "\n"
+      ],
+      "text/markdown": [
+       "```\n",
+       "cos(x)\n",
+       "```\n",
+       "\n",
+       "Compute cosine of `x`, where `x` is in radians.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "```\n",
+       "cos(A::AbstractMatrix)\n",
+       "```\n",
+       "\n",
+       "Compute the matrix cosine of a square matrix `A`.\n",
+       "\n",
+       "If `A` is symmetric or Hermitian, its eigendecomposition ([`eigen`](@ref)) is used to compute the cosine. Otherwise, the cosine is determined by calling [`exp`](@ref).\n",
+       "\n",
+       "# Examples\n",
+       "\n",
+       "```jldoctest\n",
+       "julia> cos(fill(1.0, (2,2)))\n",
+       "2×2 Matrix{Float64}:\n",
+       "  0.291927  -0.708073\n",
+       " -0.708073   0.291927\n",
+       "```\n",
+       "\n",
+       "---\n",
+       "\n",
+       "```\n",
+       "cos(x::arb)\n",
+       "```\n",
+       "\n",
+       "Return the cosine of $x$.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "```\n",
+       "cos(x::acb)\n",
+       "```\n",
+       "\n",
+       "Return the cosine of $x$.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "```\n",
+       "cos(a::fmpq_rel_series)\n",
+       "```\n",
+       "\n",
+       "Return cos$(a)$. Requires a zero constant term.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "```\n",
+       "cos(a::fmpq_abs_series)\n",
+       "```\n",
+       "\n",
+       "Return cos$(a)$. Requires a zero constant term.\n"
+      ],
+      "text/plain": [
+       "\u001b[36m  cos(x)\u001b[39m\n",
+       "\n",
+       "  Compute cosine of \u001b[36mx\u001b[39m, where \u001b[36mx\u001b[39m is in radians.\n",
+       "\n",
+       "  ────────────────────────────────────────────────────────────────────────────\n",
+       "\n",
+       "\u001b[36m  cos(A::AbstractMatrix)\u001b[39m\n",
+       "\n",
+       "  Compute the matrix cosine of a square matrix \u001b[36mA\u001b[39m.\n",
+       "\n",
+       "  If \u001b[36mA\u001b[39m is symmetric or Hermitian, its eigendecomposition (\u001b[36meigen\u001b[39m) is used to\n",
+       "  compute the cosine. Otherwise, the cosine is determined by calling \u001b[36mexp\u001b[39m.\n",
+       "\n",
+       "\u001b[1m  Examples\u001b[22m\n",
+       "\u001b[1m  ≡≡≡≡≡≡≡≡≡≡\u001b[22m\n",
+       "\n",
+       "\u001b[36m  julia> cos(fill(1.0, (2,2)))\u001b[39m\n",
+       "\u001b[36m  2×2 Matrix{Float64}:\u001b[39m\n",
+       "\u001b[36m    0.291927  -0.708073\u001b[39m\n",
+       "\u001b[36m   -0.708073   0.291927\u001b[39m\n",
+       "\n",
+       "  ────────────────────────────────────────────────────────────────────────────\n",
+       "\n",
+       "\u001b[36m  cos(x::arb)\u001b[39m\n",
+       "\n",
+       "  Return the cosine of \u001b[35mx\u001b[39m.\n",
+       "\n",
+       "  ────────────────────────────────────────────────────────────────────────────\n",
+       "\n",
+       "\u001b[36m  cos(x::acb)\u001b[39m\n",
+       "\n",
+       "  Return the cosine of \u001b[35mx\u001b[39m.\n",
+       "\n",
+       "  ────────────────────────────────────────────────────────────────────────────\n",
+       "\n",
+       "\u001b[36m  cos(a::fmpq_rel_series)\u001b[39m\n",
+       "\n",
+       "  Return cos\u001b[35m(a)\u001b[39m. Requires a zero constant term.\n",
+       "\n",
+       "  ────────────────────────────────────────────────────────────────────────────\n",
+       "\n",
+       "\u001b[36m  cos(a::fmpq_abs_series)\u001b[39m\n",
+       "\n",
+       "  Return cos\u001b[35m(a)\u001b[39m. Requires a zero constant term."
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "?cos"
+   ]
   },
   {
    "cell_type": "code",
