--- a/BerghAEfficient.ipynb
+++ b/BerghAEfficient.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "c2adc387",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "showStackyFan"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,27 +23,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "0a5aac21-6497-4913-8bb4-46c2e4a93ee3",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "pm::Matrix<pm::Rational>\n",
-       "1 0\n",
-       "1 1\n"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "LoadError",
+     "evalue": "UndefVarError: makeSmooth not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: makeSmooth not defined",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope",
+      "   @ In[4]:2",
+      " [2] eval",
+      "   @ ./boot.jl:360 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base ./loading.jl:1094"
+     ]
     }
    ],
    "source": [
-    "F=makeStackyFan([1 0; 1 1; 1 2; 1 3],[[0,1],[1,2],[2,3]],[1,2,3,4])\n",
-    "    \n",
-    "getConesPolymake(F)[1].RAYS"
+    "X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0 0;1 1 0;1 0 1;1 1 1],INPUT_CONES=[[0,1,2,3]])\n",
+    "makeSmooth(X).INPUT_RAYS"
    ]
   },
   {
@@ -800,7 +803,7 @@
    "source": [
     "X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0 2; 2 1 1; 5 3 9],INPUT_CONES=[[0,1,2]]);\n",
     "F=addStackStructure(X,[1,1,1]);\n",
-    "showStackyFan(BerghA(F,[1,1,1]),stackypoints=false)"
+    "showStackyFan(BerghA(F,[1,1,1]))"
    ]
   },
   {
