--- a/BerghAEfficient.ipynb
+++ b/BerghAEfficient.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "c2adc387",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "showStackyFan"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,55 +23,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "0a5aac21-6497-4913-8bb4-46c2e4a93ee3",
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "UndefVarError: makeSmooth not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: makeSmooth not defined",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[4]:2",
-      " [2] eval",
-      "   @ ./boot.jl:360 [inlined]",
-      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1094"
-     ]
-    }
-   ],
-   "source": [
-    "X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0 0;1 1 0;1 0 1;1 1 1],INPUT_CONES=[[0,1,2,3]])\n",
-    "makeSmooth(X).INPUT_RAYS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "8d664247-bf1e-49bb-9422-db352fbe6082",
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
+      "text/html": [
+       "[$1$, $3$]"
+      ],
       "text/plain": [
-       "pm::IncidenceMatrix<pm::NonSymmetric>\n",
-       "{0 2}\n",
-       "{1 2}\n"
+       "2-element Vector{Int64}:\n",
+       " 1\n",
+       " 3"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0; 1 2],INPUT_CONES=[[0,1]]);\n",
-    "\n",
-    "toric_blowup([0,1],X,[1,1]).INPUT_CONES"
+    "X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0 0 0; 1 0 1 0; 1 1 0 0; 1 1 1 0; 0 0 0 1],INPUT_CONES=[[0,1,2,3,4]]);\n",
+    "findMinimalCone(X,[2,1,0,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8d664247-bf1e-49bb-9422-db352fbe6082",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X=Polymake.fulton.NormalToricVariety(INPUT_RAYS=[1 0; 1 2],INPUT_CONES=[[0,1]]);"
    ]
   },
   {
