Added BerghC draft

--- a/BerghCTest.ipynb
+++ b/BerghCTest.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 84,
    "id": "721c1af3-15de-4177-81f2-a9dd411a54bc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "independencyIndex"
+       "BerghC (generic function with 2 methods)"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,118 +23,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 85,
    "id": "36ff72a0-f1d7-4a79-bd1d-d360de6f6a8c",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "[[$1$, $2$, $3$]]"
+      ],
       "text/plain": [
-       "isRelevant (generic function with 1 method)"
+       "1-element Vector{Vector{Int64}}:\n",
+       " [1, 2, 3]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"\"\"\n",
-    "    isRelevant(::Array{Int64,1},::Array{Int64,1},::StackyFan)\n",
-    "\n",
-    "    Determines if the given ray, relative to the given cone, either has a stacky value greater than 1 or is not independent.\n",
-    "\n",
-    "# Examples\n",
-    "```jldoctest AlgC\n",
-    "julia> F=makeStackyFan([1 0 0; 1 2 0; 0 0 1],[[0,1,2]],[1,1,2]);\n",
-    "\n",
-    "julia> isRelevant([1,2,0],[1,2,3],F)\n",
-    "true\n",
-    "\n",
-    "julia> F=makeStackyFan([1 0 0; 0 1 0; 0 0 1],[[0,1,2]],[1,1,2]);\n",
-    "\n",
-    "julia> isRelevant([0,1,0],[1,2,3],F)\n",
-    "false\n",
-    "\"\"\"\n",
-    "function isRelevant(ray::Array{Int64,1},cone::Array{Int64,1},F::StackyFan)\n",
-    "    rayMatrix=convert(Array{Int64,2},Array(Polymake.common.primitive(F.fan.RAYS)))\n",
-    "    rayStack=F.stacks[encode(ray)]\n",
-    "    rayIndex=getIndex(ray,rayMatrix)\n",
-    "    rayIndependent=isIndependent(rayIndex,cone,rayMatrix)\n",
-    "    if rayStack != 1 || rayIndependent == false\n",
-    "        return true\n",
-    "    else\n",
-    "        return false\n",
-    "    end\n",
-    "end"
+    "minMaxDivisorial(F,[0,0,0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 86,
    "id": "0f5d6c26-6361-4d3e-aba1-4a1a416dce5c",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "true"
-      ],
       "text/plain": [
-       "true"
+       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x000000001b4b3a70), Dict(\"0,0,1\" => 2, \"1,3,0\" => 1, \"1,0,0\" => 1))"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "F=makeStackyFan([1 0 0; 1 2 0; 0 0 1],[[0,1,2]],[1,1,2])\n",
-    "isRelevant([1,2,0],[1,2,3],F)"
+    "F=makeStackyFan([1 0 0; 1 3 0; 0 0 1],[[0,1,2]],[1,1,2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "76d2f051-453f-4e3d-84a5-fc979a707d65",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x000000001ad5ac10), Dict(\"2,3,2\" => 1, \"0,0,1\" => 2, \"1,3,0\" => 1, \"1,0,0\" => 1))"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BerghC(F,[0,0,0])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "d73e2918-4108-4a6c-a30e-7d9adb4cbbf5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "$3$"
+      ],
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "findall(x->x==5,[1,2,5,6])[1]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 55,
    "id": "87841eda-0cc4-4dba-a11b-2afe22f7d258",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "$1$"
-      ],
-      "text/latex": [
-       "1"
+       "[$3$]"
       ],
       "text/plain": [
-       "1"
+       "1-element Vector{Int64}:\n",
+       " 3"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "coneMultiplicity(C)"
+    "indices=Int64[]\n",
+    "push!(indices,findall(x->x==5,[1,2,5,7])[1])"
    ]
   },
   {
