Updated BerghC, added documentation

--- a/BerghCTest.ipynb
+++ b/BerghCTest.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "id": "721c1af3-15de-4177-81f2-a9dd411a54bc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "BerghC (generic function with 2 methods)"
+       "BerghC"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,8 +23,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "id": "36ff72a0-f1d7-4a79-bd1d-d360de6f6a8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "$2$"
+      ],
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "F=makeStackyFan([1 0 0; 0 1 0; 1 0 2],[[0,1,2]],[1,2,1]);\n",
+    "\n",
+    "div=Dict([1,0,0]=>0,[0,1,0]=>0,[1,0,2]=>1);\n",
+    "    \n",
+    "toroidalIndex([1,2,3],F,div)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "0f5d6c26-6361-4d3e-aba1-4a1a416dce5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{Vector{Int64}, Int64} with 3 entries:\n",
+       "  [1, 1, 0] => 0\n",
+       "  [3, 0, 1] => 0\n",
+       "  [1, 3, 0] => 0"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "F=makeStackyFan([1 1 0;1 3 0; 3 0 1],[[0,1,2]],[1,1,5])\n",
+    "div=Dict([1,1,0]=>0,[1,3,0]=>0,[3,0,1]=>0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "76d2f051-453f-4e3d-84a5-fc979a707d65",
    "metadata": {},
    "outputs": [
     {
@@ -37,80 +90,22 @@
        " [1, 2, 3]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "minMaxDivisorial(F,[0,0,0])"
+    "minMaxDivisorial(F,div)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "0f5d6c26-6361-4d3e-aba1-4a1a416dce5c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x000000001b4b3a70), Dict(\"0,0,1\" => 2, \"1,3,0\" => 1, \"1,0,0\" => 1))"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "F=makeStackyFan([1 0 0; 1 3 0; 0 0 1],[[0,1,2]],[1,1,2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "id": "76d2f051-453f-4e3d-84a5-fc979a707d65",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "StackyFan(Polymake.BigObjectAllocated(Ptr{Nothing} @0x000000001ad5ac10), Dict(\"2,3,2\" => 1, \"0,0,1\" => 2, \"1,3,0\" => 1, \"1,0,0\" => 1))"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "BerghC(F,[0,0,0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "d73e2918-4108-4a6c-a30e-7d9adb4cbbf5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "$3$"
-      ],
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "findall(x->x==5,[1,2,5,6])[1]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
